--- a/config/database.ci.yml
+++ b/config/database.ci.yml
@@ -1,4 +1,8 @@
-test:
+test: &db
   adapter: postgresql
   encoding: unicode
   database: <%= ENV['OMS_DATABASE_NAME'] %>
+production:
+  <<: *db
+development:
+  <<: *db
